--- a/src/variables.sass
+++ b/src/variables.sass
@@ -72,4 +72,4 @@ $columns: 12
 // Background colours
 @each $variation in $variations
   .bg-#{$variation}
-    background: var(--#{$variation})
+    background: var(--#{$variation}) !important
